terraform/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: humanosisu
  labels:
    name: humanosisu
    environment: ${ENVIRONMENT}
    project: saas-hr
