terraform/k8s/service-asistencia.yaml
apiVersion: v1
kind: Service
metadata:
  name: asistencia-service
  namespace: humanosisu
  labels:
    app: asistencia
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3003
    protocol: TCP
    name: http
  selector:
    app: asistencia
