terraform/k8s/service-bases-de-datos.yaml
apiVersion: v1
kind: Service
metadata:
  name: bases-de-datos-service
  namespace: humanosisu
  labels:
    app: bases-de-datos
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3001
    protocol: TCP
    name: http
  selector:
    app: bases-de-datos
