terraform/k8s/service-nomina.yaml
apiVersion: v1
kind: Service
metadata:
  name: nomina-service
  namespace: humanosisu
  labels:
    app: nomina
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3002
    protocol: TCP
    name: http
  selector:
    app: nomina
